--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -349,3 +349,356 @@
 </body>
 </html>
 
+ -->
+
+
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hira Foods AI Assistant</title>
+    <style>
+        :root {
+            --hira-green: #3A5D23;
+            --hira-gold: #C9A13B;
+            --hira-beige: #F9F6F2;
+            --hira-brown: #4A2C18;
+            --bubble-radius: 18px;
+        }
+        html, body {
+            height: 100%;
+        }
+        body {
+            min-height: 100vh;
+            background: linear-gradient(135deg, var(--hira-beige) 60%, var(--hira-gold) 100%);
+            font-family: 'Segoe UI', 'Tahoma', Geneva, Verdana, sans-serif;
+            color: var(--hira-brown);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0;
+        }
+        .chat-container {
+            background: #fff;
+            border-radius: 18px;
+            box-shadow: 0 6px 24px rgba(58, 93, 35, 0.12);
+            width: 100%;
+            max-width: 420px;
+            height: 600px;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+            border: 2px solid var(--hira-gold);
+        }
+        .chat-header {
+            background: var(--hira-green);
+            color: var(--hira-gold);
+            padding: 18px 0 12px 0;
+            text-align: center;
+            border-bottom: 2px solid var(--hira-gold);
+        }
+        .chat-header h1 {
+            font-size: 22px;
+            font-weight: 700;
+            margin-bottom: 2px;
+            letter-spacing: 1px;
+        }
+        .status-indicator {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
+            font-size: 13px;
+            color: var(--hira-beige);
+        }
+        .online-dot {
+            width: 9px;
+            height: 9px;
+            border-radius: 50%;
+            background-color: #8BC34A;
+            border: 2px solid var(--hira-gold);
+        }
+        .chat-messages {
+            flex: 1;
+            padding: 18px 14px;
+            overflow-y: auto;
+            background: var(--hira-beige);
+            display: flex;
+            flex-direction: column;
+            gap: 14px;
+        }
+        .message {
+            padding: 12px 16px;
+            border-radius: var(--bubble-radius);
+            max-width: 85%;
+            word-wrap: break-word;
+            font-size: 15px;
+            position: relative;
+            box-shadow: 0 1px 4px rgba(58, 93, 35, 0.07);
+        }
+        .user-message {
+            background: var(--hira-gold);
+            color: var(--hira-brown);
+            margin-left: auto;
+            border-bottom-right-radius: 4px;
+            text-align: right;
+        }
+        .ai-message {
+            background: #fff;
+            color: var(--hira-green);
+            border: 1px solid #e9ecef;
+            margin-right: auto;
+            border-bottom-left-radius: 4px;
+            text-align: left;
+        }
+        .ai-message.rtl {
+            text-align: right;
+            direction: rtl;
+        }
+        .chat-input-container {
+            padding: 14px;
+            background: #fff;
+            border-top: 2px solid var(--hira-gold);
+        }
+        .input-group {
+            display: flex;
+            gap: 8px;
+            align-items: flex-end;
+        }
+        #promptInput {
+            flex: 1;
+            padding: 10px 14px;
+            border: 1px solid #e9ecef;
+            border-radius: 20px;
+            font-size: 15px;
+            resize: none;
+            min-height: 40px;
+            max-height: 100px;
+            outline: none;
+            background: var(--hira-beige);
+            color: var(--hira-brown);
+        }
+        #promptInput::placeholder {
+            color: #999;
+            text-align: center;
+        }
+        #promptInput:focus {
+            border-color: var(--hira-gold);
+            background: #fff;
+        }
+        #sendButton {
+            background: var(--hira-green);
+            color: var(--hira-gold);
+            border: none;
+            padding: 10px 20px;
+            border-radius: 20px;
+            cursor: pointer;
+            font-size: 15px;
+            font-weight: 500;
+            transition: background 0.2s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        #sendButton:hover:not(:disabled) {
+            background: #2e471b;
+        }
+        #sendButton:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+        .typing-indicator {
+            display: none;
+            padding: 10px 14px;
+            margin-bottom: 12px;
+            border-radius: var(--bubble-radius);
+            background: #fff;
+            border: 1px solid #e9ecef;
+            max-width: 80%;
+            margin-right: auto;
+        }
+        .typing-indicator.active {
+            display: block;
+        }
+        .typing-dots {
+            display: flex;
+            gap: 4px;
+        }
+        .typing-dots span {
+            width: 7px;
+            height: 7px;
+            border-radius: 50%;
+            background-color: var(--hira-gold);
+            animation: typing 1.4s infinite ease-in-out;
+        }
+        .typing-dots span:nth-child(1) { animation-delay: -0.32s; }
+        .typing-dots span:nth-child(2) { animation-delay: -0.16s; }
+        @keyframes typing {
+            0%, 80%, 100% { transform: scale(0); }
+            40% { transform: scale(1); }
+        }
+        @media (max-width: 600px) {
+            .chat-container {
+                height: 100vh;
+                border-radius: 0;
+                max-width: 100%;
+            }
+            .message {
+                max-width: 94%;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="chat-container">
+        <div class="chat-header">
+            <h1>Hira Foods AI Assistant</h1>
+            <div class="status-indicator">
+                <div class="online-dot"></div>
+                <span>Online</span>
+            </div>
+        </div>
+        <div class="chat-messages" id="chatMessages">
+            <div class="ai-message message">
+                Welcome! How can I help you with Hira Foods today?<br>
+                <span style="font-size:12px;color:#C9A13B;">(You may ask in English or Norwegian)</span>
+            </div>
+        </div>
+        <div class="typing-indicator" id="typingIndicator">
+            <div class="typing-dots">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+        <div class="chat-input-container">
+            <div class="input-group">
+                <textarea 
+                    id="promptInput" 
+                    rows="1"
+                    placeholder="Type your message in English or Norwegian..."
+                ></textarea>
+                <button id="sendButton">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+                        <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                        <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </button>
+            </div>
+        </div>
+    </div>
+    <script>
+        // Change this to your Flask API endpoint if needed
+        const API_URL = 'https://hinabackend-production.up.railway.app/api/prompt';
+
+
+        const chatMessages = document.getElementById('chatMessages');
+        const promptInput = document.getElementById('promptInput');
+        const sendButton = document.getElementById('sendButton');
+        const typingIndicator = document.getElementById('typingIndicator');
+        const messagesEndRef = document.createElement('div');
+
+        // Auto-resize textarea
+        promptInput.addEventListener('input', function() {
+            this.style.height = 'auto';
+            this.style.height = Math.min(this.scrollHeight, 100) + 'px';
+        });
+
+        // Send message on Enter (but allow Shift+Enter for new line)
+        promptInput.addEventListener('keydown', function(e) {
+            if (e.key === 'Enter' && !e.shiftKey) {
+                e.preventDefault();
+                handleSubmit();
+            }
+        });
+
+        sendButton.addEventListener('click', handleSubmit);
+
+        function cleanEnglishText(text) {
+            text = text.replace(/\*\*/g, '');
+            text = text.replace(/\*/g, '');
+            text = text.replace(/_/g, '');
+            text = text.replace(/`/g, '');
+            text = text.replace(/#/g, '');
+            text = text.replace(/^#+\s+/gm, '');
+            text = text.replace(/^\d+\.\s+/gm, '• ');
+            text = text.replace(/\n{3,}/g, '\n\n');
+            return text.trim();
+        }
+
+        function createMessage(content, isUser = false) {
+            const messageDiv = document.createElement('div');
+            messageDiv.className = `message ${isUser ? 'user-message' : 'ai-message'}`;
+            const isNorwegian = /[æøåÆØÅ]/.test(content);
+            if (!isUser && isNorwegian) messageDiv.classList.add('rtl');
+            messageDiv.innerHTML = content.replace(/\n/g, '<br>');
+            chatMessages.appendChild(messageDiv);
+            chatMessages.appendChild(messagesEndRef);
+            messagesEndRef.scrollIntoView({ behavior: 'smooth' });
+            return messageDiv;
+        }
+
+        function showTyping() {
+            typingIndicator.classList.add('active');
+            chatMessages.scrollTop = chatMessages.scrollHeight;
+        }
+
+        function hideTyping() {
+            typingIndicator.classList.remove('active');
+        }
+
+        async function handleSubmit() {
+            const prompt = promptInput.value.trim();
+            if (!prompt) return;
+
+            createMessage(prompt, true);
+
+            promptInput.value = '';
+            promptInput.style.height = 'auto';
+            sendButton.disabled = true;
+            sendButton.innerHTML = `<span style="font-size:18px;">...</span>`;
+            showTyping();
+
+            try {
+                let tmpPromptResponse = '';
+                const response = await fetch(API_URL, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ prompt })
+                });
+
+                if (!response.body) throw new Error('No response body');
+                const reader = response.body.getReader();
+                const decoder = new TextDecoder();
+
+                const aiMessageDiv = document.createElement('div');
+                aiMessageDiv.className = 'message ai-message';
+                chatMessages.appendChild(aiMessageDiv);
+
+                while (true) {
+                    const { value, done } = await reader.read();
+                    if (done) break;
+                    const chunk = decoder.decode(value, { stream: true });
+                    tmpPromptResponse += chunk;
+                    aiMessageDiv.innerHTML = tmpPromptResponse.replace(/\n/g, '<br>');
+                    messagesEndRef.scrollIntoView({ behavior: 'smooth' });
+                }
+
+            } catch (error) {
+                createMessage('Sorry, there was an error connecting to the server.');
+            } finally {
+                sendButton.disabled = false;
+                sendButton.innerHTML = `<svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+                        <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                        <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>`;
+                hideTyping();
+                promptInput.focus();
+            }
+        }
+
+        window.addEventListener('load', () => { promptInput.focus(); });
+    </script>
+</body>
+</html>
