--- a/index.html
+++ b/index.html
@@ -1538,7 +1538,7 @@ function submitOrder(e) {
 }
 
 // --- Existing chat functionality ---
-const API_URL = 'https://hinabackend-production.up.railway.app/api/prompt';
+const API_URL = 'https://hinabackend-production.up.railway.app/chat';
 const chatMessages = document.getElementById('chatMessages');
 const promptInput = document.getElementById('promptInput');
 const sendButton = document.getElementById('sendButton');
