--- a/index.html
+++ b/index.html
@@ -708,6 +708,355 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>WeBring AI Assistant</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        :root {
+            --webring-yellow: #FFD600;
+            --webring-black: #222;
+            --webring-bg: #F4F4F4;
+            --webring-gray: #555;
+            --user-bubble-bg: #FFF9C4;
+            --bot-bubble-bg: #222;
+            --bot-bubble-color: #fff;
+            --border-radius: 18px;
+        }
+        html, body {height: 100%; }
+        body {
+            min-height: 100vh;
+            background: var(--webring-bg);
+            font-family: 'Segoe UI', 'Tahoma', Geneva, Verdana, sans-serif;
+            color: var(--webring-black);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .chat-container {
+            background: #fff;
+            border-radius: var(--border-radius);
+            box-shadow: 0 6px 24px rgba(58,93,35,0.09);
+            width: 100%;
+            max-width: 410px;
+            height: 600px;
+            display: flex;
+            flex-direction: column;
+            border: 1.5px solid var(--webring-yellow);
+            overflow: hidden;
+        }
+        .chat-header {
+            background: var(--webring-yellow);
+            color: var(--webring-black);
+            padding: 14px 0 10px 0;
+            text-align: left;
+            border-bottom: 1.5px solid #fffbe5;
+            font-weight: 700;
+            letter-spacing: 0.5px;
+            display: flex;
+            align-items: center;
+            position: relative;
+        }
+        .chat-header h1 {
+            font-size: 20px;
+            font-weight: 700;
+            padding-left: 22px;
+            margin: 0;
+            flex: 1;
+            user-select: none;
+        }
+        .chat-header .close {
+            position: absolute;
+            right: 13px; top: 13px;
+            font-size: 23px; 
+            color: #666;
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+        .chat-messages {
+            flex: 1;
+            padding: 20px 14px;
+            overflow-y: auto;
+            background: #fff;
+            display: flex;
+            flex-direction: column;
+        }
+        .message-row {
+            display: flex;
+            align-items: flex-end;
+            margin-bottom: 8px;
+        }
+        .avatar {
+            width: 36px; height: 36px;
+            border-radius: 50%;
+            background: #ddd;
+            margin-right: 7px;
+        }
+        .avatar.user {
+            margin-left: 7px; margin-right: 0;
+        }
+        .message {
+            padding: 13px 18px;
+            border-radius: var(--border-radius);
+            max-width: 77%;
+            font-size: 15px;
+            word-break: break-word;
+            box-shadow: 0 1px 4px rgba(34,34,34,0.06);
+            line-height: 1.55;
+        }
+        .message.bot {
+            background: var(--bot-bubble-bg);
+            color: var(--bot-bubble-color);
+            margin-right: auto;
+            border-bottom-left-radius: 6px;
+        }
+        .message.user {
+            background: var(--user-bubble-bg);
+            color: var(--webring-black);
+            margin-left: auto;
+            border-bottom-right-radius: 6px;
+            text-align: right;
+        }
+        .message-meta {
+            font-size: 12px; color: #999;
+            margin-top: 3px;
+            margin-bottom: 0;
+            padding: 0 4px;
+        }
+        .typing-indicator {
+            display: none;
+            padding: 9px 14px;
+            margin-bottom: 10px;
+            border-radius: var(--border-radius);
+            background: #f8f8f8;
+            border: 1px solid #eee;
+            color: #888;
+            margin-right: auto;
+            margin-left: 0;
+            font-size: 14px;
+        }
+        .typing-indicator.active {
+            display: inline-block;
+        }
+        .chat-input-container {
+            padding: 10px 12px;
+            background: #fff;
+            border-top: 1.5px solid var(--webring-yellow);
+        }
+        .input-group {
+            display: flex;
+            gap: 8px;
+            align-items: flex-end;
+        }
+        #promptInput {
+            flex: 1;
+            padding: 12px 16px;
+            border: 1.5px solid #ececec;
+            border-radius: 20px;
+            font-size: 15px;
+            min-height: 40px;
+            max-height: 80px;
+            outline: none;
+            background: #f8f8f8;
+            color: var(--webring-black);
+            resize: none;
+            transition: border 0.18s, background 0.15s;
+        }
+        #promptInput::placeholder {
+            color: #979797;
+        }
+        #promptInput:focus {
+            border-color: var(--webring-yellow);
+            background: #fffbe5;
+        }
+        #sendButton {
+            background: var(--webring-yellow);
+            color: var(--webring-black);
+            border: none;
+            padding: 12px 19px;
+            border-radius: 20px;
+            cursor: pointer;
+            font-size: 17px;
+            font-weight: 600;
+            transition: background 0.18s, color 0.18s;
+            display: flex;
+            align-items: center;
+            box-shadow: 0 2px 8px rgba(58,93,35,0.06);
+        }
+        #sendButton:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+        #sendButton:hover:not(:disabled),
+        #sendButton:focus:not(:disabled) {
+            background: #ffec80;
+            color: #111;
+        }
+        @media (max-width: 650px) {
+            .chat-container { height: 100vh; border-radius: 0; max-width: 100%; }
+            .message { max-width: 90vw; }
+        }
+    </style>
+</head>
+<body>
+<div class="chat-container">
+    <div class="chat-header">
+        <h1>Welcome to WeBring AI Assistant</h1>
+        <button class="close" title="Close" onclick="window.location.reload()">&times;</button>
+    </div>
+    <div class="chat-messages" id="chatMessages"></div>
+    <div class="typing-indicator" id="typingIndicator">
+        WeBring Bot is typing...
+    </div>
+    <div class="chat-input-container">
+        <div class="input-group">
+            <textarea 
+                id="promptInput" 
+                rows="1"
+                placeholder="Type your message here..."
+                autocomplete="off"
+            ></textarea>
+            <button id="sendButton" aria-label="Send">
+                <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
+                    <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                    <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </button>
+        </div>
+    </div>
+</div>
+<script>
+const API_URL = 'https://hinabackend-production.up.railway.app/chat'; // Set to your Flask backend endpoint
+const BOT_AVATAR = 'https://webring.ltd/assets/bot-avatar.png'; // Use your company's logo or bot avatar
+const USER_AVATAR = 'https://ui-avatars.com/api/?name=User&background=FFD600&color=222'; // Placeholder
+
+const chatMessages = document.getElementById('chatMessages');
+const promptInput = document.getElementById('promptInput');
+const sendButton = document.getElementById('sendButton');
+const typingIndicator = document.getElementById('typingIndicator');
+const messagesEndRef = document.createElement('div'); // for auto-scroll
+
+let isFirstMessage = true;
+
+function createMessage(content, isUser = false, metaText = "") {
+    const msgRow = document.createElement('div');
+    msgRow.className = 'message-row';
+    // Avatar
+    const avatar = document.createElement('img');
+    avatar.className = 'avatar' + (isUser ? ' user' : '');
+    avatar.src = isUser ? USER_AVATAR : BOT_AVATAR;
+    avatar.alt = isUser ? "You" : "Bot";
+    avatar.loading = "lazy";
+    avatar.width = 36; avatar.height = 36;
+
+    // Message bubble
+    const msgDiv = document.createElement('div');
+    msgDiv.className = `message ${isUser ? 'user' : 'bot'}`;
+    msgDiv.innerHTML = content.replace(/\n/g, "<br>");
+
+    if (isUser) {
+        msgRow.appendChild(msgDiv);
+        msgRow.appendChild(avatar);
+    } else {
+        msgRow.appendChild(avatar);
+        msgRow.appendChild(msgDiv);
+    }
+
+    chatMessages.appendChild(msgRow);
+
+    // Meta (timestamp)
+    if (metaText) {
+        const meta = document.createElement('div');
+        meta.className = 'message-meta';
+        meta.innerText = metaText;
+        msgRow.appendChild(meta);
+    }
+
+    chatMessages.appendChild(messagesEndRef);
+    messagesEndRef.scrollIntoView({ behavior: 'smooth' });
+    return msgRow;
+}
+
+function showTyping() {
+    typingIndicator.style.display = 'block';
+    chatMessages.scrollTop = chatMessages.scrollHeight;
+}
+function hideTyping() {
+    typingIndicator.style.display = 'none';
+}
+
+function getCurrentDate() {
+    const options = { weekday: 'long', year: 'numeric', month: '2-digit', day: '2-digit' };
+    return new Date().toLocaleDateString(undefined, options);
+}
+
+// Initial welcome message
+window.addEventListener('DOMContentLoaded', () => {
+    // Show date line
+    const dateRow = document.createElement('div');
+    dateRow.style.textAlign = "center";
+    dateRow.style.margin = "10px 0 15px 0";
+    dateRow.style.color = "#bbb";
+    dateRow.style.fontSize = "13px";
+    dateRow.innerText = getCurrentDate();
+    chatMessages.appendChild(dateRow);
+
+    // Welcome
+    createMessage(`<b>Welcome to WeBring AI Assistant</b><br>
+        I'm here to help you with<br>
+        <span style="color:#FFD600">digital solutions, apps, web development, and more.</span>
+        <br><br>How can I help you today?`, false);
+});
+
+promptInput.addEventListener('input', function() {
+    this.style.height = 'auto';
+    this.style.height = Math.min(this.scrollHeight, 80) + 'px';
+});
+
+promptInput.addEventListener('keydown', function(e) {
+    if (e.key === 'Enter' && !e.shiftKey) {
+        e.preventDefault();
+        handleSubmit();
+    }
+});
+sendButton.addEventListener('click', handleSubmit);
+
+async function handleSubmit() {
+    const prompt = promptInput.value.trim();
+    if (!prompt) return;
+    createMessage(prompt, true);
+    promptInput.value = '';
+    promptInput.style.height = 'auto';
+    sendButton.disabled = true;
+    showTyping();
+
+    try {
+        const response = await fetch(API_URL, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ message: prompt }) 
+        });
+
+        const data = await response.json();
+        // Show bot response
+        createMessage(data.response, false);
+
+    } catch (error) {
+        createMessage('Sorry, there was an error connecting to the server.', false);
+    } finally {
+        sendButton.disabled = false;
+        hideTyping();
+        promptInput.focus();
+    }
+}
+</script>
+</body>
+</html>
+
+<!-- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <title>Hira Foods AI Assistant</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -1639,4 +1988,4 @@ window.addEventListener('load', () => { promptInput.focus(); renderWelcome(); })
 </script>
 </body>
 </html>
-
+ -->
