--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
     </div>
 </div>
 <script>
-const API_URL = 'webringbotbe-production.up.railway.app/chat'; // Set to your Flask backend endpoint
+const API_URL = 'https://webringbotbe-production.up.railway.app/chat'; // Set to your Flask backend endpoint
 const BOT_AVATAR = 'https://webring.ltd/assets/bot-avatar.png'; // Use your company's logo or bot avatar
 const USER_AVATAR = 'https://ui-avatars.com/api/?name=User&background=FFD600&color=222'; // Placeholder
 
