--- a/index.html
+++ b/index.html
@@ -1534,7 +1534,7 @@ async function handleSubmit() {
 <!-- <div class="modal" id="mainModal" tabindex="-1" aria-modal="true" role="dialog">
     <div class="modal-content" id="modalContent">
         <!-- Dynamic content -->
-    </div>
+<!--     </div>
 </div>
 <script>
 const translations = {
@@ -1987,5 +1987,5 @@ window.openCateringModal = openCateringModal;
 window.addEventListener('load', () => { promptInput.focus(); renderWelcome(); });
 </script>
 </body>
-</html> -->
+</html>
  -->
