--- a/index.html
+++ b/index.html
@@ -845,6 +845,7 @@ border-top: 1.5px solid var(--webring-yellow);
 display: flex;
 gap: 8px;
 align-items: flex-end;
+background: var(--bot-bubble-bg);
 }
 #promptInput {
 flex: 1;
@@ -853,7 +854,7 @@ border: 1.5px solid #ececec;
 border-radius: 20px;
 font-size: 15px;
 min-height: 40px;
-max-height: 80px;
+max-height: 50px;
 outline: none;
 background: #f8f8f8;
 color: var(--webring-black);
