--- a/index.html
+++ b/index.html
@@ -840,6 +840,7 @@ display: inline-block;
 padding: 10px 12px;
 background: #fff;
 border-top: 1.5px solid var(--webring-yellow);
+background: var(--bot-bubble-bg);
 }
 .input-group {
 display: flex;
