--- a/index.html
+++ b/index.html
@@ -732,14 +732,13 @@ justify-content: center;
 }
 .chat-container {
 background: #fff;
-border-radius: var(--border-radius);
 box-shadow: 0 6px 24px rgba(58,93,35,0.09);
 width: 100%;
 max-width: 410px;
 height: 600px;
 display: flex;
 flex-direction: column;
-border: 1.5px solid var(--webring-yellow);
+border: 1.5px solid  var(--bot-bubble-bg);
 overflow: hidden;
 }
 .chat-header {
