--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@ max-width: 410px;
 height: 600px;
 display: flex;
 flex-direction: column;
-border: 1.5px solid  var(--bot-bubble-bg);
+/* border: 1.5px solid  var(--bot-bubble-bg); */
 overflow: hidden;
 }
 .chat-header {
@@ -853,8 +853,8 @@ padding: 12px 16px;
 border: 1.5px solid #ececec;
 border-radius: 20px;
 font-size: 15px;
-min-height: 40px;
-max-height: 50px;
+min-height: 20px;
+max-height: 20px;
 outline: none;
 background: #f8f8f8;
 color: var(--webring-black);
