--- a/index.html
+++ b/index.html
@@ -927,8 +927,11 @@ autocomplete="off"
 </div>
 <script>
 const API_URL = 'https://webringbotbe-production.up.railway.app/chat'; // Set to your Flask backend endpoint
-const BOT_AVATAR = 'https://webring.ltd/assets/bot-avatar.png'; // Use your company's logo or bot avatar
-const USER_AVATAR = 'https://ui-avatars.com/api/?name=User&background=FFD600&color=222'; // Placeholder
+// Use professionally designed avatars:
+const BOT_AVATAR = 'https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-chatbot-robotics-flatart-icons-outline-flatarticons-3.png'; // Example bot avatar from Icons8
+
+const USER_AVATAR = 'https://randomuser.me/api/portraits/men/32.jpg'; // Example user avatar photo from RandomUser or use your own
+
 
 const chatMessages = document.getElementById('chatMessages');
 const promptInput = document.getElementById('promptInput');
