--- a/index.html
+++ b/index.html
@@ -928,9 +928,9 @@ autocomplete="off"
 <script>
 const API_URL = 'https://webringbotbe-production.up.railway.app/chat'; // Set to your Flask backend endpoint
 // Use professionally designed avatars:
-const BOT_AVATAR = 'https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-chatbot-robotics-flatart-icons-outline-flatarticons-3.png'; // Example bot avatar from Icons8
+const BOT_AVATAR = 'https://www.freepik.com/premium-photo/cyborg-head-artificial-intelligence-3d-rendering_5072307.htm#fromView=search&page=1&position=11&uuid=509a0a6f-4768-460c-94dc-4c21d6348772&query=ai+avator'; // Example bot avatar from Icons8
 
-const USER_AVATAR = 'https://randomuser.me/api/portraits/men/32.jpg'; // Example user avatar photo from RandomUser or use your own
+const USER_AVATAR = 'https://www.freepik.com/premium-vector/user-profile-people-social-media-icon_65960696.htm#fromView=search&page=1&position=45&uuid=ff528d51-f174-4139-a6a4-9000336881b9&query=user+avator'; // Example user avatar photo from RandomUser or use your own
 
 
 const chatMessages = document.getElementById('chatMessages');
