--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@ autocomplete="off"
 </div>
 <script>
 const API_URL = 'https://webringbotbe-production.up.railway.app/chat'; // Set to your Flask backend endpoint
-const BOT_AVATAR = "https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-chatbot-robotics-flatart-icons-outline-flatarticons-3.png";
+const BOT_AVATAR = "https://img.icons8.com/color/96/robot.png";
 const USER_AVATAR = "https://img.icons8.com/ios-glyphs/60/000000/user--v1.png";
 // Example: General user icon from Icons8
 
