--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@ color: #111;
 <body>
 <div class="chat-container">
 <div class="chat-header">
-<h1>Welcome to WeBring AI Assistant</h1>
+<h1>WeBring AI Assistant</h1>
 <button class="close" title="Close" onclick="window.location.reload()">&times;</button>
 </div>
 
