--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 :root {
---webring-yellow: #FFD600;
+--webring-yellow: #727B97;
 --webring-black: #222;
 --webring-bg: #F4F4F4;
 --webring-gray: #555;
@@ -900,13 +900,13 @@ color: #111;
 <body>
 <div class="chat-container">
 <div class="chat-header">
-<h1>WeBring AI Assistant</h1>
+<h1>TheHealthSpace AI Assistant</h1>
 <button class="close" title="Close" onclick="window.location.reload()">&times;</button>
 </div>
 
 <div class="chat-messages" id="chatMessages"></div>
 <div class="typing-indicator" id="typingIndicator">
-WeBring Bot is typing...
+TheHealthSpace Bot is typing...
 </div>
 <div class="chat-input-container">
 <div class="input-group">
