--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@ autocomplete="off"
 </div>
 </div>
 <script>
-const API_URL = 'https://webringbotbe-production.up.railway.app/chat'; // Set to your Flask backend endpoint
+const API_URL = 'https://web-production-56b6.up.railway.app/chat'; // Set to your Flask backend endpoint
 const BOT_AVATAR = "https://img.icons8.com/color/96/robot.png";
 const USER_AVATAR = "https://img.icons8.com/ios-glyphs/60/000000/user--v1.png";
 // Example: General user icon from Icons8
