--- a/index.html
+++ b/index.html
@@ -707,11 +707,11 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>WeBring AI Assistant</title>
+<title>Colonical & Wellness Center AI Assistant</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 :root {
---webring-yellow: #727B97;
+--webring-yellow: #DCBE5C;
 --webring-black: #222;
 --webring-bg: #F4F4F4;
 --webring-gray: #555;
@@ -901,13 +901,13 @@ color: #111;
 <body>
 <div class="chat-container">
 <div class="chat-header">
-<h1>TheHealthSpace AI Assistant</h1>
+<h1>Colonical & Wellness Center AI Assistant</h1>
 <button class="close" title="Close" onclick="window.location.reload()">&times;</button>
 </div>
 
 <div class="chat-messages" id="chatMessages"></div>
 <div class="typing-indicator" id="typingIndicator">
-TheHealthSpace Bot is typing...
+Colonical & Wellness Center Bot is typing...
 </div>
 <div class="chat-input-container">
 <div class="input-group">
