--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@ color: #111;
 <body>
 <div class="chat-container">
 <div class="chat-header">
-<h1>Colonical & Wellness Center AI Assistant</h1>
+<h1>Colonic Center AI Assistant</h1>
 <button class="close" title="Close" onclick="window.location.reload()">&times;</button>
 </div>
 
