--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Colonical & Wellness Center AI Assistant</title>
+<title>Colonic & Wellness Center AI Assistant</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 :root {
@@ -907,7 +907,7 @@ color: #111;
 
 <div class="chat-messages" id="chatMessages"></div>
 <div class="typing-indicator" id="typingIndicator">
-Colonical & Wellness Center Bot is typing...
+Colonic & Wellness Center Bot is typing...
 </div>
 <div class="chat-input-container">
 <div class="input-group">
